<resources>
    <string name="app_name">CRM_Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_employee">Çalışanlar</string>
    <string name="menu_firm">Firmalar</string>
    <string name="menu_lead">Duyumlar</string>
    <string name="menu_expense">Masraflar</string>
    <string name="menu_expenseAdd">Masraf Ekle</string>
</resources>